--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,12 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<!<!DOCTYPE html>
+<html>
+    <head>
+        <title>Home | Pet Amigo WebApp para Gestão</title>
+    </head>
+    <body>
+        <h1>Gestor Pet Amigo</h1>
+        <p>
+            Essa é a página principal para o Gestor Pet Amigo.    
+        </p>
+    </body>
+</html>
