--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,12 @@
-<h1>About</h1>
-<p>
-    O Gestor Pet Amigo faz a gestão das contas do iOS App Pet Amigo
-</p>
+<!<!DOCTYPE html>
+<html>
+    <head>
+        <title>About | Pet Amigo WebApp para Gestão</title>
+    </head>
+    <body>
+        <h1>Gestor Pet Amigo</h1>
+        <p>
+            O Gestor Pet Amigo faz a gestão das contas do iOS App Pet Amigo.
+        </p>
+    </body>
+</html>
