--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,12 +1,5 @@
-<!<!DOCTYPE html>
-<html>
-    <head>
-        <title>Help | Pet Amigo WebApp para Gestão</title>
-    </head>
-    <body>
-        <h1>Gestor Pet Amigo</h1>
-        <p>
-            Essa é a página HELP para o Gestor Pet Amigo.    
-        </p>
-    </body>
-</html>
+<% provide(:title, "Help") %>
+<h1>Help</h1>
+<p>
+    Essa é a página HELP para o Gestor Pet Amigo.    
+</p>
